# harness-scafford

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  harness.toml  pyproject.toml
.github/workflows/: ci.yml  nightly-evals.yml  smoke.yml
docs/: architecture.md  codex.md  index.md  memory.md  observability.md  operations.md  prompts.md  structure.md
docs/references/: harness-engineering.md
examples/tasks/: offline-smoke.yaml
memory/: active-tasks.md  current-focus.md  decisions.md  project.md
ops/observability/: alloy.alloy  docker-compose.yml  prometheus.yml  tempo.yaml
scripts/: check_docs.py  check_schemas.py  run_smoke.py
src/harness/: __init__.py  config.py
src/harness/agents/: __init__.py  implementer.py  planner.py  provider.py  reviewer.py
src/harness/cli/: main.py
src/harness/codex/: __init__.py  bootstrap.py
src/harness/dashboard/: app.py
src/harness/memory/: __init__.py  store.py
src/harness/observability/: __init__.py  logging.py  telemetry.py
src/harness/orchestrator/: __init__.py  runner.py
src/harness/schemas/: __init__.py  run.py  task.py
src/harness/tasks/: __init__.py  models.py  service.py
src/harness/tools/: __init__.py  base.py  browser.py  codex_exec.py  fs.py  git.py  shell.py  tests.py  web_fetch.py  web_search.py
tests/integration/: test_run_service.py  test_task_service.py
tests/unit/: test_browser_tool.py  test_cli.py  test_codex_bootstrap.py  test_codex_exec_tool.py  test_provider.py  test_reviewer_packet.py  test_task_schema.py  test_web_fetch.py
